[tool.poetry]
name = "ilia-code"
version = "0.3.0"
description = ""
authors = ["Ilia Rassolov"]
readme = "README.md"
packages = [{include = "hello"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "hello.scripts.hello_world:main"
